--- a/app/sass/_global.scss
+++ b/app/sass/_global.scss
@@ -12,18 +12,40 @@ $second-bg-color: #fff;
   }
  
   body{
-    font-size: 16px;
-   
+    font-size: 16px;  
     font-family: 'Asap', sans-serif;
-    width: 100%;
+      
     color: #4d4d4d;
   }
   .wraper{
     max-width: 1366px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 10px; 
+
+    /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) {} 
+
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    padding: 0 10px;
+  } 
+
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    
+  } 
+
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    padding: 0 50px;
+  } 
+
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
     padding: 0 100px;
   }
+}
   button{
     font-family: 'Asap', sans-serif;
     font-size: 1rem;
