--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -25,6 +25,7 @@
  
   a{
     color: #4d4d4d;
+    font-size: 1rem;
     font-weight: 400;
     padding-bottom: 0.5rem;
     border-bottom: 2px solid transparent;
@@ -33,7 +34,7 @@
     }
   }
   .active{
-    color: #4d4d4d;
+    border-color: rgba(77, 77, 77,.6);
   }
 
 }
