--- a/app/sass/_services.scss
+++ b/app/sass/_services.scss
@@ -11,6 +11,7 @@
 .features-item{
   position: relative;
   width: 33%;
+  min-width: 300px;
   padding-top: 90px;
   text-align: center;
   margin-bottom: 5rem;
