--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -1,7 +1,9 @@
 .main-header{
   display: flex;
-  position: relative;
+   align-items: center;
   justify-content: space-between;
+  position: relative;
+  
   padding-top: 1.6rem;
   z-index: 999;
 
@@ -13,6 +15,7 @@
   height: 55px;
 }
 .main-nav{
+  display: none;
   height: auto;
 
   li{
@@ -38,4 +41,13 @@
   }
 
 }
+
+@media only screen and (min-width: 600px) {
+    .main-nav{
+      display: block;
+    }
+    .burger-wraper {
+      display: none;
+    }
+  } 
 
