--- a/app/sass/_portfolio.scss
+++ b/app/sass/_portfolio.scss
@@ -20,8 +20,10 @@
     margin-bottom: 1.6rem;
     width: 30%;
     max-width: 370px;
+    transition: 0.3s;
     &:hover{
-      box-shadow: 0 0px 5px 1px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0px 15px 3px rgba(0, 0, 0, 0.3);
+      transform: scale(1.03);
     }
   }
   img{
