--- a/app/sass/_services.scss
+++ b/app/sass/_services.scss
@@ -10,8 +10,8 @@
 }
 .features-item{
   position: relative;
-  width: 33%;
-  min-width: 300px;
+  width: 100%;
+  min-width: 200px;
   padding-top: 90px;
   text-align: center;
   margin-bottom: 5rem;
@@ -38,7 +38,7 @@
   h3{
     max-width: 220px;
     overflow: hidden;
-    font-size: 24px;
+    // font-size: 24px;
     font-weight: 500;
     margin: 0 auto;
   }
@@ -56,3 +56,45 @@
   text-align: left;
   
 }
+    /* Extra small devices (phones, 600px and down) */
+// @media only screen and (max-width: 600px) {
+//   .features-item{
+//     width: 50%;
+//   }
+
+   
+//   } 
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 420px) {
+    .features-item{
+    width: 50%;
+     h3{
+        font-size: 1.375rem;
+    
+      }
+  }
+  }
+   
+
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .features-item{
+    width: 33%;
+  }
+    
+  } 
+
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+   
+ 
+  } 
+
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+   
+  }
+  @media only screen and (min-width: 1285px) {
+  
+
+  }
