--- a/app/sass/_hero.scss
+++ b/app/sass/_hero.scss
@@ -11,7 +11,8 @@
                       110deg, #e1e1e1 0%,  #e1e1e1 10%, #dedddd 10%, #dedddd 24%, );
   button{
     margin: 0 1rem 1rem 0;
-    width: 160px;
+    width: 28%;
+    min-width: 130px;
     height: 50px;
   }                  
 }
