--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -2,15 +2,11 @@
   display: flex;
    align-items: center;
   justify-content: space-between;
-  position: relative;
-  
+  position: relative;  
   padding-top: 1.6rem;
   z-index: 999;
-
-  background-color: transparent;
-  
+  background-color: transparent; 
 }
-
 .logo{
   height: 55px;
 }
@@ -25,7 +21,6 @@
       margin: 0;
     }   
   }
- 
   a{
     color: #4d4d4d;
     font-size: 1rem;
@@ -39,9 +34,7 @@
   .active{
     border-color: rgba(77, 77, 77,.6);
   }
-
 }
-
 @media only screen and (min-width: 600px) {
     .main-nav{
       display: block;
@@ -50,4 +43,31 @@
       display: none;
     }
   } 
-
+.nav-modal{
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top:0;
+  left: 0;
+  background-color: #e1e1e1;
+  ul{
+    display: flex;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+  li{
+    text-align: center;
+    margin: 1rem;
+  }
+  a{
+    color: #4d4d4d;
+    font-size: 1rem;
+    font-weight: 400;}
+}
