--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -8,15 +8,15 @@
   @include full_page_img("./../img/contact_bg.png");
   form{
     display: block;
-    width: 66%;
     margin: 0 auto;
     color: #212121;  
   }
   input{
-    width: 370px;
-    height: 57px;
+    width: 48%;
+    height: 2.5rem;
     padding: 1rem;
     background-color: #ffffff;
+    border: 0;
     &::placeholder{
       opacity: 0.8;     
       font-size: 1rem;
@@ -30,6 +30,7 @@
     padding: 1rem;
     margin-bottom: 1.5rem; 
     resize: none;
+    border: 0;
     &::placeholder{
       opacity: 0.8;     
       font-size: 1rem;
@@ -54,7 +55,7 @@
       content: '';
       width: 1rem;
       height: 1rem;
-      background-image: url("./../img/send-button.png");
+      background-image: url("./../img/send-button.svg");
       background-repeat: no-repeat;
     }
     &:hover{
@@ -67,3 +68,34 @@
   flex-wrap: wrap;
   margin-bottom: 2rem;
 }
+
+@media only screen and (max-width: 600px) {
+  .massage{
+    form{
+        width: 90%;
+      }
+  }
+  
+}
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .massage{
+      form{
+          width: 80%;
+        }
+        input{
+        height: 3rem;}
+    }
+} 
+  /* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .massage{
+    padding-bottom: 160px;
+      form{
+          width: 68%;
+        }
+        input{
+        height: 3.5rem;}
+    }
+} 
+
