--- a/app/sass/_services.scss
+++ b/app/sass/_services.scss
@@ -1,100 +1,68 @@
 .services{
   background-color: $bg-color;
-  padding-bottom: 2.3rem; 
+  padding-bottom: 2rem;
 }
-.features-list{
-  
+.features-list{  
   @extend %space-between;
   flex-wrap: wrap;
-
 }
 .features-item{
   position: relative;
-  width: 100%;
-  min-width: 200px;
-  padding-top: 90px;
+  width: 33%; 
+  padding-top: 70px;
   text-align: center;
-  margin-bottom: 5rem;
-  &:nth-child(1) .features-icon{
-    background-position: -0px -75px; 
-    width: 77px; 
-    height: 77px;
-  }
-  &:nth-child(2) .features-icon{
-    background-position: -0px -152px; width: 76px; height: 62px;
-  }
-  &:nth-child(3) .features-icon{
-    background-position: -0px -290px; width: 67px; height: 75px;
-  }
-  &:nth-child(4) .features-icon{
-    background-position: -0px -0px; width: 90px; height: 75px;
-  }  
-  &:nth-child(5) .features-icon{
-    background-position: -0px -365px; width: 57px; height: 81px;
-  }
-  &:nth-child(6) .features-icon{
-    background-position: -0px -214px; width: 76px; height: 76px;
-  }
+  margin-bottom: 2rem;
+
   h3{
     max-width: 220px;
     overflow: hidden;
-    // font-size: 24px;
     font-weight: 500;
     margin: 0 auto;
+    font-size: 1.1rem;
   }
-
+  &:nth-child(1) .features-icon{
+    background-image: url(./../img/1features.svg);    
+  }
+  &:nth-child(2) .features-icon{
+    background-image: url(./../img/2features.svg);    
+  }
+  &:nth-child(3) .features-icon{
+    background-image: url(./../img/3features.svg);    
+  }
+  &:nth-child(4) .features-icon{
+    background-image: url(./../img/4features.svg);    
+  }
+  &:nth-child(5) .features-icon{
+    background-image: url(./../img/5features.svg);    
+  }
+  &:nth-child(6) .features-icon{
+    background-image: url(./../img/6features.svg);    
+  }
 }
 .features-icon{
+  width: 50px;
+  height: 50px;
   position: absolute;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-
-  background: url('./../img/all-features.png') no-repeat; 
-  overflow: hidden; 
-  text-indent: -9999px; 
-  text-align: left;
-  
-}
-    /* Extra small devices (phones, 600px and down) */
-// @media only screen and (max-width: 600px) {
-//   .features-item{
-//     width: 50%;
-//   }
-
-   
-//   } 
-  /* Small devices (portrait tablets and large phones, 600px and up) */
-  @media only screen and (min-width: 420px) {
-    .features-item{
-    width: 50%;
-     h3{
-        font-size: 1.375rem;
-    
-      }
-  }
-  }
-   
-
-  /* Medium devices (landscape tablets, 768px and up) */
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}  
   @media only screen and (min-width: 768px) {
     .features-item{
-    width: 33%;
-  }
-    
+      padding-top: 90px;
+       margin-bottom: 5rem;
+        h3{
+          font-size: 1.5rem;    
+        }
+      }
+     .services{
+      padding-bottom: 2.3rem; 
+     } 
+     .features-icon{
+      width: 80px;
+      height: 80px;}
   } 
-
-  /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) {
-   
- 
-  } 
-
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-  @media only screen and (min-width: 1200px) {
-   
-  }
-  @media only screen and (min-width: 1285px) {
-  
-
-  }
