--- a/app/sass/_testimonials.scss
+++ b/app/sass/_testimonials.scss
@@ -1,41 +1,30 @@
 .testimonials{
-  padding-bottom: 8rem;}
-  
-
-.testimonial{
-  color: #212121;
-  h4{
-    opacity: 0.9;
-    color: #212121;
-    font-size: 30px;
-    font-weight: 500;
-
-    text-transform: uppercase;
-  }
-  
-
-
+  padding-bottom: 4rem;
 }
-.testimonial-list{
-  width: 82%;
+.flex-wraper{
+  @extend %space-between;
+}
+  
+.testimonial-list{ 
+  width: 84%;
   margin: 0 auto;
   border: 1px solid #212121;
   padding: 5rem 7.5rem 6.7rem;
   li{ 
-    display: none;   
-     //for test and fun 
-     &:nth-child(2) img{
-       transform: rotate(90deg);}
-     &:nth-child(3) img{
-       transform: rotate(180deg);}     
-  }
-  img{
-    margin-right: 2rem;
+    display: none;       
   }
 }
-.testimonial-wraper{
-    display: flex;
-  }  
+
+
+.testimonial-photo{
+  display: block;
+  width: 23%;
+  min-width: 100px;
+  img{
+    width: 100%;
+    height: auto;
+  }
+}    
   
 .position{
   margin-bottom: 1rem;
@@ -46,9 +35,22 @@
 
   text-transform: uppercase;
 }
+
+.testimonial{
+  color: #212121;
+  width:100%;
+  h4{
+    opacity: 0.9;
+    color: #212121;
+    font-weight: 500;
+
+    text-transform: uppercase;
+  }
+}
 .testimonial-text{
+  width: 100%;
   max-width: 570px;
-  height: 95px;
+  height: 100px;
   overflow: hidden;
   opacity: 0.6;
   font-size: 16px;
@@ -56,3 +58,59 @@
   line-height: 26px;
   text-transform: uppercase;
 }
+
+@media only screen and (max-width: 600px) {
+  .testimonial-list{
+      width: 95%; 
+      padding: 3rem 1.5rem 3.5rem;
+  }
+  .flex-wraper{
+     flex-direction: column;
+     align-items: center;
+  }
+  .testimonial{
+    text-align: center;
+  }
+}
+
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .testimonial-list{
+      width: 95%; 
+          padding: 5rem 1.5rem 6.7rem;
+        }
+     h4{
+      font-size: 1rem;
+    }
+      .testimonial{
+        width: 73%;
+      } 
+
+  }
+    
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .testimonial-list{ 
+          padding: 5rem 3rem 6.7rem;
+          //padding: 5rem 1rem 6.7rem;
+        }
+     h4{
+      font-size: 1.5rem;
+    }      
+  } 
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    h4{
+      font-size: 1.9rem;
+    }
+    .testimonials{
+  padding-bottom: 8rem;
+}
+  } 
+
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    .testimonial-list{ 
+      padding: 5rem 7.5rem 6.7rem;
+    }
+} 
